--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,14 @@
         <spring.boot.version>2.1.6.RELEASE</spring.boot.version>
         <spring.cloud.version>Greenwich.SR2</spring.cloud.version>
         <spring.platform.version>Cairo-SR7</spring.platform.version>
-        <mysql.connector.java.version>8.0.15</mysql.connector.java.version>
+        <mysql.connector.java.version>8.0.16</mysql.connector.java.version>
         <mybatis.plus.version>3.1.0</mybatis.plus.version>
         <swagger.version>2.9.2</swagger.version>
         <swagger.annotations>1.5.20</swagger.annotations>
         <hutool.version>4.5.10</hutool.version>
         <lombok.version>1.18.6</lombok.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <log4j.version>2.13.3</log4j.version>
         <project.sourceEncoding>UTF-8</project.sourceEncoding>
         <org.apache.maven.plugins.version>3.8.0</org.apache.maven.plugins.version>
         <docker.plugins.version>1.2.0</docker.plugins.version>
@@ -145,14 +147,14 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-common</artifactId>
                 <version>${swagger.version}</version>
-                <scope>compile</scope>
+<!--                <scope>compile</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger.annotations}</version>
-                <scope>compile</scope>
+<!--                <scope>compile</scope>-->
             </dependency>
 
             <!--工具包开始 -->
@@ -167,9 +169,27 @@
                 <artifactId>commons-compress</artifactId>
                 <version>[1.18,)</version>
             </dependency>
+
+            <!-- 日志 -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
             <!--Lombok-->
             <dependency>
